--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     height: 50px;
     background-color:antiquewhite;
     text-align: right;
+    font-size: 1.5em;
     border-radius: 5px;
     border: none;
     margin: 20px;
