--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
 }
 
 
-
 .calculator {
     background-color: gray;
     width: 90%;
@@ -20,16 +19,30 @@ body {
     border-radius: 5px;
 }
 
-#display {
+
+#operation-display, #display {
     width: 100%;
-    height: 50px;
-    background-color:antiquewhite;
+    background-color: antiquewhite;
     text-align: right;
-    font-size: 1.5em;
+    color: black; 
     border-radius: 5px;
     border: none;
-    margin: 20px;
-    
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+#operation-display {
+    height: 25px;
+    font-size: 0.9em;
+    border-bottom-left-radius: 0; 
+    border-bottom-right-radius: 0;
+}
+
+#display {
+    height: 50px;
+    font-size: 1.5em;
+    border-top-left-radius: 0; 
+    border-top-right-radius: 0;
 }
 
 .buttons {
@@ -37,6 +50,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     width: 100%;
+    margin-top: 20px;
 }
 
 button {
